Fix compile errors from build log